<resources>
    <string name="app_name">TodoListKt</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="todo_list">My Todos</string>
    <string name="add_todo">+</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description (Optional)</string>
    <string name="delete">Delete</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="new_todo">New Todo</string>
    <string name="logout">Logout</string>
</resources>